<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Nome da APP, usado pelo AndroidManifest -->
    <string name="app_name">RCB Manutenções [BETA]</string>

    <!-- Strings para itens do menu -->
    <string name="novo">Novo</string>
    <string name="mapa">Mapa</string>
    <string name="mais_opcoes">Mais opções</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="provas">Provas</string>
    <string name="preferencias">Preferências</string>
    <string name="nome_aluno">Informe o nome do aluno</string>
    <string name="add_aluno">Adicionar aluno</string>
    <string name="titulo_formulario">Dados do Aluno</string>
    <string name="foto_aluno">Foto do Aluno</string>
    <string name="telefone">Telefone</string>
    <string name="telefone_hint">Informe o telefone</string>
    <string name="site">Site</string>
    <string name="site_hint">Informe o Site</string>
    <string name="email">E-mail</string>
    <string name="email_hint">exemplo@gmail.com</string>
    <string name="endereco">Endereço</string>
    <string name="endereco_hint">Informe o endereço</string>
    <string name="nota">Nota</string>
    <string name="salvar_dados">Salvar Dados</string>
    <string name="ligar">Ligar</string>
    <!-- Outras strings aqui... -->
    
    <!-- Strings da tela de Detalhes da Prova -->
    <string name="titulo_provas">Provas</string>
    <string name="detalhes_prova">Detalhes da Prova</string>
    <string name="materia">Matéria</string>
    <string name="data">Data</string>
    
     <!-- GLOBAIS -->
    <string name="action_settings">Opções</string>
    <string name="tet_sistemas">TeTSistemas</string>
    <string name="Ligar">Ligar</string>
    <string name="enviarSMS">Enviar SMS</string>
    <string name="acharNoMapa">Achar no mapa</string>
    <string name="enviarEmail">Enviar e-mail</string>
    <string name="deletar">Deletar</string>
    
    <!--  PÁGINA PRINCIPAL (activity_main) -->
    <string name="manutencao">Manutenção</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="erro_autenticacao">Usuário ou senha inválidos</string>

    <!-- PÁGINA DE MENU E MANU_BAR (activity_menu) -->
    <string name="menu">Menu Principal</string>
    <string name="iniciarManutencao">Iniciar Manutenção</string>
    <string name="minhasManutencoes">Manutenções realizadas</string>
    <string name="solucaoManutencao">Solução da Manutenção</string>
    <string name="configuracoes">Configurações</string>
    
    <!-- PÁGINA DE MANUTENÇÃO (activity_manutencao)-->
    <string name="plataforma_add">Concluir manutenção</string>
    <string name="plataforma_tirar_foto">Tirar Foto</string>
    <string name="plataforma">Plataforma</string>
    <string name="plataforma_nome">Nome plataforma</string>
    <string name="plataforma_descricao">Descrição</string>
    <string name="plataforma_numero">Número</string>
    <string name="plataforma_af">AF</string>
    <string name="plataforma_horimetro">Horímetro</string>
    <string name="plataforma_descricao_problema">Descrição do problema</string>
    <string name="plataforma_imagem">Imagem da plataforma</string>
    <string name="plataforma_imagem_problema">Imagem do problema</string>
    <string name="plataforma_causa_problema">Causa do problema</string>
    <string name="plataforma_imagem_causa">Imagem da causa problema</string>
    <string name="plataforma_descricao_peca">Descrição da peça</string>
    <string name="plataforma_numero_peca">Número da peça</string>
    <string name="plataforma_quantidade">Quantidade</string>
    <string name="plataforma_tipo">tipo</string>
    
    <string name="nome">Nome</string>
    <string name="descricao">Descrição</string>
    <string name="numero">Número</string>
    <string name="af">AF</string>
    <string name="horimetro">Horimetro</string>
    <string name="foto_plataforma">Foto da plataforma</string>
    <string name="foto_problema">Foto do problema</string>
    <string name="foto_causa">Foto da causa do problema</string>
    <string name="descricao_problema">Descrição do problema</string>
    <string name="causa_problema">Descrição da causa do problema</string>
    <string name="descricao_peca">Descrição da peca</string>
    <string name="numero_peca">Número da peca</string>
    <string name="quantidade">Quantidade</string>
    <string name="tipo">Tipo</string>
    
    <!-- CLIENT_MAIN -->    
	<string name="client_label_page">Cadastro de Cliente</string>
	<string name="client_label_client">Cliente</string>
	<string name="client_label_name">Nome</string>
	<string	name="client_label_phone">Telefone</string>
	<string	name="client_label_email">E-mail</string>
	<string	name="client_label_address">Endereço</string>
	<string	name="client_label_number">Número</string>
	<string	name="client_label_district">Bairro</string>
	<string	name="client_label_cep">CEP</string>
	<string	name="client_label_complement">Complemento</string>
	<string	name="client_label_city">Cidade</string>
	<string	name="client_label_state">Estado</string>
	<string	name="client_label_distance">Distância</string>
	
	<!-- Login -->
	<string name="login">Informe seus dados cadastraris</string>
	<string name="login_usuario">Usuário</string>
	<string name="login_senha">Senha</string>
</resources>