<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/iniciarManutencao"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edPlataformaNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plataforma_nome"
            android:inputType="text" >

            <requestFocus android:layout_width="wrap_content" />
        </EditText>

        <TextView
            android:id="@+id/tvDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edPlataformaDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plataforma_descricao"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/tvFotoPlataforma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foto_plataforma"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/foto_plataforma"
            android:layout_width="245dp"
            android:layout_height="245dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/plataforma"
            android:src="@android:drawable/ic_menu_camera" />

        <TextView
            android:id="@+id/tvNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edPlataformaNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plataforma_numero"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvAF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/af"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edPlataformaAF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plataforma_af"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvHorimetro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horimetro"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edPlataformaHorimetro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plataforma_horimetro"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvDescricaoProblema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao_problema"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edPlataformaDescricaoProblema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plataforma_descricao_problema" />

        <TextView
            android:id="@+id/tvFotoProblema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foto_problema"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/foto_problema"
            android:layout_width="431dp"
            android:layout_height="212dp"
            android:layout_gravity="center"
            android:contentDescription="@string/plataforma"
            android:src="@android:drawable/ic_menu_camera" />

        <TextView
            android:id="@+id/tvPlataformaCausaProblema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/causa_problema"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edPlataformaCausaProblema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plataforma_causa_problema" />

        <TextView
            android:id="@+id/tvFotoCausa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foto_causa"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/foto_causa"
            android:layout_width="431dp"
            android:layout_height="212dp"
            android:layout_gravity="center"
            android:contentDescription="@string/plataforma"
            android:src="@android:drawable/ic_menu_camera" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/solucaoManutencao"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/tvDescricaoPeca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao_peca"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edPlataformaDescricaoPeca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plataforma_descricao_peca"
            android:inputType="text" />
        
        <TextView
            android:id="@+id/tvNumeroPeca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_peca"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edPlataformaNumeroPeca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plataforma_numero_peca"
            android:inputType="number" />
        
        <TextView
            android:id="@+id/tvQuantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantidade"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edPlataformaQuantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plataforma_quantidade"
            android:inputType="text" />
        
        <TextView
            android:id="@+id/tvTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edPlataformaTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plataforma_tipo"
            android:inputType="text" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
         
        <Button
            android:id="@+id/sbSalvar"
            android:layout_width="362dp"
            android:layout_height="78dp"
            android:layout_gravity="center"
            android:drawableStart="@android:drawable/ic_menu_add"
            android:text="@string/plataforma_add"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

</ScrollView>